Add end-to-end testing server and refactor code
An end-to-end testing server has been added to the build script. Code refactors include adding a more detailed log to the rendering process, taking away unnecessary semicolons in Enumerations.kt, changing the html formatting in index.html, and adding conditions for creating screen capture in render.kt. Refactoring was done to improve readability and maintainability. New server functionality expands testing capabilities.